# gorgan

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  mypy.ini  pyproject.toml  setup.cfg
configs/: cycle.yaml  dcgan.yaml  esrgan.yaml  train_config_commented_example.yaml
sobolt/gorgan/: __init__.py
sobolt/gorgan/data/: __init__.py  dataset.py  dataset_pair.py  factory.py  image_folder.py  progressive_dataset_decorator.py  random.py  rendering_functions.py  transforms.py
sobolt/gorgan/gan/: __init__.py  ade_gan.py  base_gan.py  cycle_gan.py  dummy_gan.py  factory.py  gan.py
sobolt/gorgan/graphs/: __init__.py  factory.py
sobolt/gorgan/losses/: __init__.py  adversarial.py  composite_loss.py  hue.py  least_squared_error.py  local_phase_coherence.py  minimax.py  perceptual.py  rgb.py  ssim.py  total_variation.py  wasserstein.py
sobolt/gorgan/nn/: __init__.py  blur_convertor.py  dense_block.py  frequency_convertor.py  gradient_convertor.py  greyscale_convertor.py  in1_dataparallel.py  interpolator.py  layer_extractor.py  naive_downsampler.py  physical_downsampler.py  print_shape.py  reshape.py  residual_block.py  residual_channel_attention_block.py  residual_convolution_block.py  residual_identity_block.py  residual_in_residual_dense_block.py  residual_spade_block.py  spade.py  subpixel_convolution.py
sobolt/gorgan/optim/: __init__.py  lr_scheduler_threshold.py  optimizer_factory.py  scheduler_adapter.py  scheduler_factory.py
sobolt/gorgan/trainers/: __init__.py  base_trainer.py  factory.py  trainer.py
sobolt/gorgan/validation/: psnr.py  (+8 more)
tests/: data.py  data_render.py  functional.py  graphs.py  nn_functional.py  validation.py
tests/test_unit/: scheduler_factory_test.py  test_lr_threshold_scheduler.py  test_optimizer_factory.py  test_scheduler_adapter.py  test_transforms_factory.py
(+46 files in other folders)
