[metadata]
name = gorgan
version = 1.0.0
description = A GAN framework by Sobolt combining various GAN concepts into 1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sobolt-anieuwland/gorgan
author = Otto Fabius, Edoardo Guerriero, Danny Hetharia, Ligia Monne, Arthur Nieuwland
author_email = o.fabius@sobolt.com, e.guerriero@sobolt.com, d.hethara@sobolt.com, l.monne@sobolt.com, a.nieuwland@sobolt.com
license = MIT License
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    sobolt.gorgan
    sobolt.gorgan
    sobolt.gorgan.bin
    sobolt.gorgan.data
    sobolt.gorgan.data.render
    sobolt.gorgan.gan
    sobolt.gorgan.graphs
    sobolt.gorgan.graphs.discriminators
    sobolt.gorgan.graphs.generators
    sobolt.gorgan.losses
    sobolt.gorgan.nn
    sobolt.gorgan.nn.attention
    sobolt.gorgan.nn.functional
    sobolt.gorgan.optim
    sobolt.gorgan.trainers
    sobolt.gorgan.validation
    sobolt.gorgan.validation.performance_metrics
    sobolt.gorgan.validation.performance_metrics.functional
install_requires =
    wheel
    numpy==1.18.1
    pyyaml==5.3.1
    nptyping==0.3.1
    matplotlib==3.1.3
    tqdm==4.42.1
    rasterio==1.1.8
    torch>=1.7,<1.8
    torchvision>=0.7,<=0.8.2
    scikit-image==0.16.2
    tensorboard>=1.15.0
    torch_fidelity==0.2.0
    pytorch_msssim==0.2.1
    scikit-learn==0.22.1
    piqa==1.1.3

python_requires = >=3.6,<3.9

[options.entry_points]
console_scripts =
    gorgan = sobolt.gorgan.bin.in1:main
